Update Page 3-week 8.html

--- a/Homework 8/Page 3-week 8.html
+++ b/Homework 8/Page 3-week 8.html
@@ -51,9 +51,9 @@
             
             var yesbutton = document.getElementById('optionYes');
             var nobutton = document.getElementById('optionNo');
-            if (!(yesbutton.checked ) && !(nobutton.checked))
+            if (!(yesbutton.checked))
             {
-                window.alert("Please Select Terms of Service")
+                 window.alert("Please Select Terms of Service")
             }
            else
            {
